# cloud-infra

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  README.md.tpl  todo.md  wal.md
.claude/: settings.json
.codex/: config.toml
.gemini/: settings.json
.github/act/: molecule.json  packer-build.json  (+3 more)
ansible/: .ansible-lint  .gitignore  ansible.cfg  gateway.yml  mikrotik.yml  playbook.yml  pyproject.toml  requirements.yml
ansible/roles/base/defaults/: main.yml
ansible/roles/base/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/files/: otelcol-contrib-default.yaml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: otelcol-contrib.init.j2
ansible/roles/gateway/defaults/: main.yml
ansible/roles/gateway/files/: blocky-default.yaml
ansible/roles/gateway/molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
ansible/roles/gateway/tasks/: main.yml
ansible/roles/gateway/templates/: blocky.init.j2  wg-quick.init.j2
ansible/roles/mikrotik/defaults/: main.yml
ansible/roles/mikrotik/tasks/: main.yml
ansible/tests/unit/: test_rc_update.py
dev/: docker-compose.yml  grafana-dashboards.yaml  otelcol-config.yaml  otelcol-extra.yaml  prometheus.yaml  restore-volumes.sh
docs/: cloud-infrastructure.md  cloud-migration-plan.md  diagrams.md  github-app.md  hardware-inventory.md  terraform.md
packer/: alpine.pkr.hcl  gateway.pkr.hcl  gateway.pkrvars.hcl.example  variables.pkr.hcl
scripts/: dockerfile  generate-readme.py  pyproject.toml  render-template.py  run-cloud-init.py  setup-github-oauth.sh  upload-secrets.sh
terraform/: .gitignore  .terraform.lock.hcl  backend.hcl.example  compute.tf  data.tf  main.tf  network.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
(+33 files in other folders)
